5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1822_1642.log
== TEST (2019-06-13 11:07:00) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 = 0:
		cont = cont + 1
		print(cont)
-- ERROR:
File "XXXX", line 7
    if i %5 = 0:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:08) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:33) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:05) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
		print(sum(cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:34) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
		print(size(cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:01) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print(size(cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:30) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:31) 
-- CODE:
from numpy import * 

x = array(eval(input("quantidade: ")))

cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print((cont))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:09) 
-- CODE:
from numpy import * 
#z = zeros(size(x), dtype=int)
x = array(eval(input("quantidade: ")))
z = zeros(size(x), dtype=int)

#v = 0
cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print(cont)
#for i in range(x):
#	if z[0]%5==0:
#		z[0]=z[0]+1	
	

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:53:10) 
-- CODE:
from numpy import * 
#z = zeros(size(x), dtype=int)
x = array(eval(input("quantidade: ")))
z = zeros(size(x), dtype=int)

#v = 0
cont = 0
for i in x:
	if i %5 == 0:
		cont = cont + 1
print(cont)
for i in range(x):
	
	

	
		
-- EXECUTION TIME:
0.570171
-- ERROR:
  File "/home/codebench/codes/1822/1642/main.py", line 18
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
